# proalgotrader_core_template

./: README.md  main.py  pyproject.toml  run.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  env_validator.py
app/dependencies/: __init__.py  auth.py
app/fasthtml_views/: COMPONENTS.md  __init__.py  algo_session_detail.py  algo_sessions.py  base_symbols.py  broker_symbols.py  components.py  dashboard.py  initialize.py  login.py  router.py  trading_calendar.py
app/models/: __init__.py  algo_session.py  base_symbol.py  broker.py  broker_symbol.py  broker_token.py  github.py  project.py  strategy.py  trading_calendar.py  user.py
app/routers/: __init__.py  algo_sessions.py  auth.py  base_symbols.py  base_symbols.py.bak  broker.py  broker_symbols.py  project.py  strategy.py  trading_calendar.py  websocket.py
app/services/: __init__.py  base_symbols_service.py  broker_token_manager.py  connection_manager.py  project_service.py  strategy_manager.py  trading_calendar_service.py
db/: __init__.py  database.py  init_db.py
proalgotrader_core/: __init__.py  algo_session.py  algorithm.py  api.py  application.py  args_manager.py  base_algorithm.py  broker.py  broker_info.py  broker_manager.py  github_repository_info.py  logger.py  notification_manager.py  project_info.py  run_strategy.py
proalgotrader_core/order_broker_managers/: __init__.py  angel_one_order_broker_manager.py  live_order_broker_manager.py  paper_order_broker_manager.py
proalgotrader_core/protocols/: __init__.py  algo_session.py  algorithm.py  api.py  application.py  args_manager.py  (+8 more)
project/: __init__.py  strategy.py
(+20 files in other folders)
